SBeffects.cfg: Switch to hardcoding each effect instead of using variable
Sadly it seems like LED Effects cannot grab the values from a variable.

--- a/SBeffects.cfg
+++ b/SBeffects.cfg
@@ -5,7 +5,7 @@
 
 
 # Most configuration for the macros can be done by modifying the variables in the _sb_vars macro
-# at the start of this file.
+# at the start of this file. For modifying the colors please modify the actual LED effect.
 
 ##########
 # MACROS #
@@ -67,7 +67,7 @@ leds:
 autostart:                          false
 frame_rate:                         24
 layers:
-    breathing 2  0 top    ({% printer["gcode_macro _sb_vars"].effects[nozzle][heating][r] %},{% printer["gcode_macro _sb_vars"].effects[nozzle][heating][g] %},{% printer["gcode_macro _sb_vars"].effects[nozzle][heating][b] %})
+    breathing 2  0 top    (0.8,0.35,0)
 
 [led_effect nozzle_standby_effect]
 leds:
@@ -75,7 +75,7 @@ leds:
 autostart:                          true
 frame_rate:                         24
 layers:
-    static 1  0 top    ({% printer["gcode_macro _sb_vars"].effects[nozzle][standby][r] %},{% printer["gcode_macro _sb_vars"].effects[nozzle][standby][g] %},{% printer["gcode_macro _sb_vars"].effects[nozzle][standby][b] %})
+    static 1  0 top    (0.6,0,0)
 
 [led_effect nozzle_printing_effect]
 leds:
@@ -83,7 +83,7 @@ leds:
 autostart:                          false
 frame_rate:                         24
 layers:
-    static 1  0 top    ({% printer["gcode_macro _sb_vars"].effects[nozzle][printing][r] %},{% printer["gcode_macro _sb_vars"].effects[nozzle][printing][g] %},{% printer["gcode_macro _sb_vars"].effects[nozzle][printing][b] %})
+    static 1  0 top    (1,1,1)
 
 [led_effect logo_standby_effect]
 leds:
@@ -91,7 +91,7 @@ leds:
 autostart:                          true
 frame_rate:                         24
 layers:
-    static  1  0 top    ({% printer["gcode_macro _sb_vars"].effects[logo][standby][r] %},{% printer["gcode_macro _sb_vars"].effects[logo][standby][g] %},{% printer["gcode_macro _sb_vars"].effects[logo][standby][b] %})
+    static  1  0 top    (0.01,0.01,0.01)
 
 [led_effect logo_busy_effect]
 leds:
@@ -99,7 +99,7 @@ leds:
 autostart:                          false
 frame_rate:                         24
 layers:
-    breathing  2  0 top    ({% printer["gcode_macro _sb_vars"].effects[logo][busy][r] %},{% printer["gcode_macro _sb_vars"].effects[logo][busy][g] %},{% printer["gcode_macro _sb_vars"].effects[logo][busy][b] %})
+    breathing  2  0 top    (0.4,0,0)
 
 [led_effect logo_cleaning_effect]
 leds:
@@ -107,7 +107,7 @@ leds:
 autostart:                          false
 frame_rate:                         24
 layers:
-    breathing  2  0 top    ({% printer["gcode_macro _sb_vars"].effects[logo][cleaning][r] %},{% printer["gcode_macro _sb_vars"].effects[logo][cleaning][g] %},{% printer["gcode_macro _sb_vars"].effects[logo][cleaning][b] %})
+    breathing  2  0 top    (0,0.02,0.5)
 
 [led_effect logo_calibrating_z_effect]
 leds:
@@ -115,7 +115,7 @@ leds:
 autostart:                          false
 frame_rate:                         24
 layers:
-    breathing  2  0 top    ({% printer["gcode_macro _sb_vars"].effects[logo][calibrating_z][r] %},{% printer["gcode_macro _sb_vars"].effects[logo][calibrating_z][g] %},{% printer["gcode_macro _sb_vars"].effects[logo][calibrating_z][b] %})
+    breathing  2  0 top    (0.8,0,0.35)
 
 [led_effect logo_heating_effect]
 leds:
@@ -123,7 +123,7 @@ leds:
 autostart:                          false
 frame_rate:                         24
 layers:
-    breathing  2  0 top    ({% printer["gcode_macro _sb_vars"].effects[logo][heating][r] %},{% printer["gcode_macro _sb_vars"].effects[logo][heating][g] %},{% printer["gcode_macro _sb_vars"].effects[logo][heating][b] %})
+    breathing  2  0 top    (0.3,0.18,0)
 
 [led_effect logo_homing_effect]
 leds:
@@ -131,7 +131,7 @@ leds:
 autostart:                          false
 frame_rate:                         24
 layers:
-    breathing  2  0 top    ({% printer["gcode_macro _sb_vars"].effects[logo][homing][r] %},{% printer["gcode_macro _sb_vars"].effects[logo][homing][g] %},{% printer["gcode_macro _sb_vars"].effects[logo][homing][b] %})
+    breathing  2  0 top    (0,0.6,0.2)
 
 [led_effect logo_leveling_effect]
 leds:
@@ -139,7 +139,7 @@ leds:
 autostart:                          false
 frame_rate:                         24
 layers:
-    breathing  2  0 top    ({% printer["gcode_macro _sb_vars"].effects[logo][leveling][r] %},{% printer["gcode_macro _sb_vars"].effects[logo][leveling][g] %},{% printer["gcode_macro _sb_vars"].effects[logo][leveling][b] %})
+    breathing  2  0 top    (0.5,0.1,0.4)
 
 [led_effect logo_meshing_effect]
 leds:
@@ -147,7 +147,7 @@ leds:
 autostart:                          false
 frame_rate:                         24
 layers:
-    breathing  2  0 top    ({% printer["gcode_macro _sb_vars"].effects[logo][meshing][r] %},{% printer["gcode_macro _sb_vars"].effects[logo][meshing][g] %},{% printer["gcode_macro _sb_vars"].effects[logo][meshing][b] %})
+    breathing  2  0 top    (0.2,1,0)
 
 [led_effect logo_printing_effect]
 leds:
@@ -155,8 +155,7 @@ leds:
 autostart:                          false
 frame_rate:                         24
 layers:
-    static  1  0 top    ({% printer["gcode_macro _sb_vars"].effects[logo][printing][r] %},{% printer["gcode_macro _sb_vars"].effects[logo][printing][g] %},{% printer["gcode_macro _sb_vars"].effects[logo][printing][b] %})
-
+    static  1  0 top    (1,0,0)
 
 [gcode_macro _set_sb_leds_by_name]
 gcode:
@@ -256,4 +255,3 @@ gcode:
     status_off
     _set_nozzle_leds EFFECT=printing
     _set_logo_leds EFFECT=printing
-
